target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'..'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Val'", 
                     "'Var'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'Self'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'>'", 
                     "'<='", "'<'", "'>='", "'==.'", "'+.'", "'::'", "':'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "INTLIT", "ZERO", 
                      "FLOATLIT", "BOOLLIT", "STRINGLIT", "BREAK", "CONTINUE", 
                      "IF", "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", 
                      "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", "STRING", 
                      "RETURN", "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "SELF", "ADD", "MINUS", 
                      "MULTIPLY", "DIVIDE", "MODULUS", "NOT", "AND", "OR", 
                      "EQUAL", "ASSIGN", "UNEQUAL", "GREATER", "LESS_EQ", 
                      "LESS", "GREATER_EQ", "COMPARE_STR", "CONCAT_STR", 
                      "DOUBLE_COLON", "COLON", "LP", "RP", "LSB", "RSB", 
                      "DOT", "COMMA", "SEMI", "LCB", "RCB", "ID", "STATIC_ID", 
                      "WS", "UNCLOSE_STRING", "ERROR_CHAR", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_arrlit = 1
    RULE_mul_arrlit = 2
    RULE_literal = 3
    RULE_exprlist1 = 4
    RULE_exprlist2 = 5
    RULE_expr = 6
    RULE_expr0 = 7
    RULE_expr1 = 8
    RULE_expr2 = 9
    RULE_expr3 = 10
    RULE_expr4 = 11
    RULE_expr5 = 12
    RULE_expr6 = 13
    RULE_expr7 = 14
    RULE_expr8 = 15
    RULE_expr9 = 16
    RULE_expr10 = 17
    RULE_operand = 18
    RULE_statement = 19
    RULE_attr_list_1 = 20
    RULE_attr_list_2 = 21
    RULE_vardecl = 22
    RULE_constdecl = 23
    RULE_idlist1 = 24
    RULE_idlist2 = 25
    RULE_assign = 26
    RULE_ifstmt = 27
    RULE_blockstmt = 28
    RULE_elifstmt = 29
    RULE_elsestmt = 30
    RULE_forstmt = 31
    RULE_breakstmt = 32
    RULE_continuestmt = 33
    RULE_returnstmt = 34
    RULE_index_expr = 35
    RULE_index_operator = 36
    RULE_accessor = 37
    RULE_object_create = 38
    RULE_attr_access = 39
    RULE_method_access = 40
    RULE_static_attr = 41
    RULE_static_method = 42
    RULE_method_invoc = 43
    RULE_classdecl = 44
    RULE_attr_list_1_gen = 45
    RULE_attr_list_2_gen = 46
    RULE_vardecl_general = 47
    RULE_constdecl_general = 48
    RULE_idlist1_general = 49
    RULE_idlist2_general = 50
    RULE_method_decl = 51
    RULE_paralist1 = 52
    RULE_paralist2 = 53
    RULE_construct_decl = 54
    RULE_destruct_decl = 55
    RULE_declaration = 56
    RULE_array_decl = 57
    RULE_dtype = 58
    RULE_dtype_array = 59

    ruleNames =  [ "program", "arrlit", "mul_arrlit", "literal", "exprlist1", 
                   "exprlist2", "expr", "expr0", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "expr9", 
                   "expr10", "operand", "statement", "attr_list_1", "attr_list_2", 
                   "vardecl", "constdecl", "idlist1", "idlist2", "assign", 
                   "ifstmt", "blockstmt", "elifstmt", "elsestmt", "forstmt", 
                   "breakstmt", "continuestmt", "returnstmt", "index_expr", 
                   "index_operator", "accessor", "object_create", "attr_access", 
                   "method_access", "static_attr", "static_method", "method_invoc", 
                   "classdecl", "attr_list_1_gen", "attr_list_2_gen", "vardecl_general", 
                   "constdecl_general", "idlist1_general", "idlist2_general", 
                   "method_decl", "paralist1", "paralist2", "construct_decl", 
                   "destruct_decl", "declaration", "array_decl", "dtype", 
                   "dtype_array" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    INTLIT=3
    ZERO=4
    FLOATLIT=5
    BOOLLIT=6
    STRINGLIT=7
    BREAK=8
    CONTINUE=9
    IF=10
    ELSEIF=11
    ELSE=12
    FOREACH=13
    TRUE=14
    FALSE=15
    ARRAY=16
    IN=17
    INT=18
    FLOAT=19
    BOOLEAN=20
    STRING=21
    RETURN=22
    NULL=23
    CLASS=24
    VAL=25
    VAR=26
    CONSTRUCTOR=27
    DESTRUCTOR=28
    NEW=29
    BY=30
    SELF=31
    ADD=32
    MINUS=33
    MULTIPLY=34
    DIVIDE=35
    MODULUS=36
    NOT=37
    AND=38
    OR=39
    EQUAL=40
    ASSIGN=41
    UNEQUAL=42
    GREATER=43
    LESS_EQ=44
    LESS=45
    GREATER_EQ=46
    COMPARE_STR=47
    CONCAT_STR=48
    DOUBLE_COLON=49
    COLON=50
    LP=51
    RP=52
    LSB=53
    RSB=54
    DOT=55
    COMMA=56
    SEMI=57
    LCB=58
    RCB=59
    ID=60
    STATIC_ID=61
    WS=62
    UNCLOSE_STRING=63
    ERROR_CHAR=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassdeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.classdecl()
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 125
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrlitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExprContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_arrlit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrlit" ):
                return visitor.visitArrlit(self)
            else:
                return visitor.visitChildren(self)




    def arrlit(self):

        localctx = D96Parser.ArrlitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arrlit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(D96Parser.ARRAY)
            self.state = 128
            self.match(D96Parser.LP)

            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 129
                    self.expr()
                    self.state = 130
                    self.match(D96Parser.COMMA) 
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 137
            self.expr()
            self.state = 139
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mul_arrlitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def arrlit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ArrlitContext)
            else:
                return self.getTypedRuleContext(D96Parser.ArrlitContext,i)


        def mul_arrlit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Mul_arrlitContext)
            else:
                return self.getTypedRuleContext(D96Parser.Mul_arrlitContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_mul_arrlit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul_arrlit" ):
                return visitor.visitMul_arrlit(self)
            else:
                return visitor.visitChildren(self)




    def mul_arrlit(self):

        localctx = D96Parser.Mul_arrlitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mul_arrlit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(D96Parser.ARRAY)
            self.state = 142
            self.match(D96Parser.LP)

            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 145
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 143
                        self.arrlit()
                        pass

                    elif la_ == 2:
                        self.state = 144
                        self.mul_arrlit()
                        pass


                    self.state = 147
                    self.match(D96Parser.COMMA) 
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 154
                self.arrlit()
                pass

            elif la_ == 2:
                self.state = 155
                self.mul_arrlit()
                pass


            self.state = 158
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(D96Parser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(D96Parser.FLOATLIT, 0)

        def BOOLLIT(self):
            return self.getToken(D96Parser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(D96Parser.STRINGLIT, 0)

        def arrlit(self):
            return self.getTypedRuleContext(D96Parser.ArrlitContext,0)


        def mul_arrlit(self):
            return self.getTypedRuleContext(D96Parser.Mul_arrlitContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = D96Parser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literal)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(D96Parser.INTLIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(D96Parser.FLOATLIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.match(D96Parser.BOOLLIT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 163
                self.match(D96Parser.STRINGLIT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 164
                self.arrlit()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 165
                self.mul_arrlit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exprlist1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def exprlist2(self):
            return self.getTypedRuleContext(D96Parser.Exprlist2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exprlist1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist1" ):
                return visitor.visitExprlist1(self)
            else:
                return visitor.visitChildren(self)




    def exprlist1(self):

        localctx = D96Parser.Exprlist1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exprlist1)
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INTLIT, D96Parser.ZERO, D96Parser.FLOATLIT, D96Parser.BOOLLIT, D96Parser.STRINGLIT, D96Parser.ARRAY, D96Parser.NULL, D96Parser.NEW, D96Parser.SELF, D96Parser.MINUS, D96Parser.NOT, D96Parser.LP, D96Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.expr()
                self.state = 169
                self.exprlist2()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exprlist2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def exprlist2(self):
            return self.getTypedRuleContext(D96Parser.Exprlist2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exprlist2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist2" ):
                return visitor.visitExprlist2(self)
            else:
                return visitor.visitChildren(self)




    def exprlist2(self):

        localctx = D96Parser.Exprlist2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exprlist2)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.match(D96Parser.COMMA)
                self.state = 175
                self.expr()
                self.state = 176
                self.exprlist2()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr0(self):
            return self.getTypedRuleContext(D96Parser.Expr0Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = D96Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.expr0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Expr1Context)
            else:
                return self.getTypedRuleContext(D96Parser.Expr1Context,i)


        def CONCAT_STR(self):
            return self.getToken(D96Parser.CONCAT_STR, 0)

        def COMPARE_STR(self):
            return self.getToken(D96Parser.COMPARE_STR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_expr0

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr0" ):
                return visitor.visitExpr0(self)
            else:
                return visitor.visitChildren(self)




    def expr0(self):

        localctx = D96Parser.Expr0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr0)
        self._la = 0 # Token type
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.expr1()
                self.state = 184
                _la = self._input.LA(1)
                if not(_la==D96Parser.COMPARE_STR or _la==D96Parser.CONCAT_STR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 185
                self.expr1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.expr1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Expr2Context)
            else:
                return self.getTypedRuleContext(D96Parser.Expr2Context,i)


        def EQUAL(self):
            return self.getToken(D96Parser.EQUAL, 0)

        def UNEQUAL(self):
            return self.getToken(D96Parser.UNEQUAL, 0)

        def LESS(self):
            return self.getToken(D96Parser.LESS, 0)

        def GREATER(self):
            return self.getToken(D96Parser.GREATER, 0)

        def LESS_EQ(self):
            return self.getToken(D96Parser.LESS_EQ, 0)

        def GREATER_EQ(self):
            return self.getToken(D96Parser.GREATER_EQ, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_expr1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr1" ):
                return visitor.visitExpr1(self)
            else:
                return visitor.visitChildren(self)




    def expr1(self):

        localctx = D96Parser.Expr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr1)
        self._la = 0 # Token type
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.expr2(0)
                self.state = 191
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.EQUAL) | (1 << D96Parser.UNEQUAL) | (1 << D96Parser.GREATER) | (1 << D96Parser.LESS_EQ) | (1 << D96Parser.LESS) | (1 << D96Parser.GREATER_EQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 192
                self.expr2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.expr2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
